# downloader

./: .gitignore  Cargo.toml  Makefile  README.md  bindings.h  build.rs  default.nix  derivation.nix  shell.nix
src/: capi.rs  downloader.rs  lib.rs  main.rs
tests/capi/: CMakeLists.txt  shell.nix
tests/capi/downloader/: downloader-config.cmake
tests/capi/src/: main.c
