[package]
name = "downloader"
version = "0.1.0"
authors = ["herwig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.10.9", features = [ "blocking" ] }

[build-dependencies]
cbindgen = "0.15.0"

[dev-dependencies]
actix-web = "3.3.2"
actix-rt = "*"
tokio = "*"
tempfile = "3.1.0"